Added news blurb

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -6,6 +6,17 @@
     @ViewData["Title"]
 </h3>
 <h3>
+    April 30th, 2020
+</h3>
+<h5>Staying at home</h5>
+<p>
+    Stay-at-home orders are causing us all to find a new rhythm. While staying safe, the
+    <a href="/LHYC/Competitor/2144">competitor</a>
+    page finally got some attention, and is now available by clicking on a competitor
+    name in series results. Let us know what you think and if there's a stat you
+    think would be useful, please let us know.
+</p>
+<h3>
     March 14th, 2020
 </h3>
 <h5>To the cloud...</h5>
