--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -164,7 +164,7 @@
 <h5>Other News</h5>
 <p>
     We've consolidated our issues list with the SailScores code at
-    <a href="https://github.com/jbfraser1/SailScores/issues" target="_blank">GitHub.</a> Some
+    <a href="https://github.com/jbfraser1/SailScores/issues" target="_blank" rel="noopener noreferrer">GitHub.</a> Some
     of the issues have a "Help wanted" tag, where we'd love to hear more input from potential users.
 </p>
 <br />
