--- a/SailScores.Web/Views/Series/Index.cshtml
+++ b/SailScores.Web/Views/Series/Index.cshtml
@@ -50,7 +50,7 @@
                 <div class="col-md-3">
                     @if (series.UpdatedDate.HasValue)
                     {
-                        <span class="d-none d-md-table-cell"><i><small>@localizer["Updated"] @(series.UpdatedDate.Value.ToString("d"))</small></i></span>
+                        <span class="d-none d-md-table-cell updated-date">@localizer["Updated"] @(series.UpdatedDate.Value.ToString("d"))</span>
                     }
                 </div>
                 <div class="col-12 ml-3">
