--- a/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
+++ b/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
@@ -17,22 +17,19 @@
                     Create
                 </a>
             </p>
-            <table class="table table-not-wide">
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Edit", "Edit", "ScoringSystem", new { id = item.Id }) |
-                                @Html.ActionLink("Delete", "Delete", "ScoringSystem", new { id = item.Id })
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
+
+            @foreach (var item in Model)
+            {
+                <div class="row border-bottom mb-1 pb-1">
+                    <div class="col-6 col-sm-4 col-md-4">
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2">
+                        @Html.ActionLink("Edit", "Edit", "ScoringSystem", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", "ScoringSystem", new { id = item.Id })
+                    </div>
+                </div>
+            }
         </div>
     </div>
 </div>
