--- a/SailScores.Web/Views/Competitor/Details.cshtml
+++ b/SailScores.Web/Views/Competitor/Details.cshtml
@@ -18,7 +18,7 @@
         <span class="h2 avoidwrap">@Model.Item.SailNumber</span>&emsp;
         <span class="avoidwrap">
             <span class="h3 avoidwrap">@Model.Item.Name</span>&emsp;
-            <span class="h3 avoidwrap"><i>@Model.Item.BoatName</i></span>
+            <span class="h3 avoidwrap"><em>@Model.Item.BoatName</em></span>
         </span>
     </div>
 </div>
