--- a/SailScores.Web/Views/BoatClass/Create.cshtml
+++ b/SailScores.Web/Views/BoatClass/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <span class="small"><i>Optional</i></span>
+                <span class="small"><em>Optional</em></span>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
