--- a/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
+++ b/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
@@ -36,7 +36,7 @@
                     <span asp-validation-for="BoatClassId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="FleetIds" class="control-label">Fleets <span class="small muted"><i>Optional</i> If in doubt, leave empty.</span></label>
+                    <label asp-for="FleetIds" class="control-label">Fleets <span class="small muted"><em>Optional</em> If in doubt, leave empty.</span></label>
                     <select id="seriesIds" asp-for="FleetIds" class="form-control selectpicker" multiple>
                         @foreach (var fleet in Model.FleetOptions)
                         {
@@ -70,7 +70,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                Home Club <span class="small muted"><i>Optional - for regattas</i></span>
+                                Home Club <span class="small muted"><em>Optional - for regattas</em></span>
                             </div>
                         </div>
                     </div>
