--- a/SailScores.Web/Views/Race/Index.cshtml
+++ b/SailScores.Web/Views/Race/Index.cshtml
@@ -40,55 +40,53 @@
 @localizer["Races"]
 </h2>
 
-<table class="table">
-    <tbody>
-        @foreach (var item in
-           Model.List.GroupBy(s => s.Season?.Name ?? String.Empty, s => s))
+<div class="container">
+    @foreach (var item in
+      Model.List.GroupBy(s => s.Season?.Name ?? String.Empty, s => s))
+    {
+        <div class="row">
+            <div class="col-12">
+                <h2>@item.Key</h2>
+            </div>
+        </div>
+        @foreach (var race in item)
         {
-            <tr id="@item.Key">
-                <td>
-                    <h2>@item.Key</h2>
-                </td>
-            </tr>
-            @foreach (var race in item)
-            {
-                <tr>
-                    <td>
-                        <span class="d-md-none">
-                            <a asp-action="Details"
-                               asp-controller="Race"
-                               asp-route-id=@race.Id>
-                                @race.FleetShortName:
-                            R@(race.Order) @race.Date.ToShortString()
-                        </a>
-                    </span>
-                    <span class="d-none d-md-block">
-                        @Html.ActionLink(
-                            race.CalculatedName
-                            , "Details", new { id = race.Id })
-                    </span>
-                </td>
-                <td>
-                    @{ var lastSeries = race.SeriesNames.LastOrDefault(); }
-                    @foreach (var seriesName in race.SeriesNames)
-                    {
-                        var separator = seriesName != lastSeries ? $", " : "";
-                        <a href="~/@Model.ClubInitials/@race.Season.Name/@seriesName">@seriesName</a>@separator
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => race.CompetitorCount)
-                    @localizer["boats"]
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => race.Name)
-                    @Html.DisplayFor(modelItem => race.Description)
-                </td>
-                <td class="d-none d-md-table-cell">
-                    @race.State
-                </td>
-            </tr>
+<div class="row border-bottom mb-1 pb-1">
+    <div class="col-6 col-md-4">
+        <span class="d-md-none">
+            <a asp-action="Details"
+               asp-controller="Race"
+               asp-route-id=@race.Id>
+                @race.FleetShortName:
+                R@(race.Order) @race.Date.ToShortString()
+            </a>
+        </span>
+        <span class="d-none d-md-inline">
+            @Html.ActionLink(
+                race.CalculatedName
+                , "Details", new { id = race.Id })
+        </span>
+    </div>
+    <div class="col-3 small">
+        @{ var lastSeries = race.SeriesNames.LastOrDefault(); }
+        @foreach (var seriesName in race.SeriesNames)
+        {
+            var separator = seriesName != lastSeries ? $", " : "";
+            <a href="~/@Model.ClubInitials/@race.Season.Name/@seriesName">@seriesName</a>@separator
         }
+    </div>
+    <div class="col-2">
+        @Html.DisplayFor(modelItem => race.CompetitorCount)
+        @localizer["boats"]
+    </div>
+    <div class="col-1 d-none d-md-inline">
+        @race.State
+    </div>
+    <div class="col-12 d-none d-md-inline">
+        @Html.DisplayFor(modelItem => race.Name)
+        @Html.DisplayFor(modelItem => race.Description)
+    </div>
+</div>
         }
-    </tbody>
-</table>
+    }
+</div>
