--- a/SailScores.Web/Views/Shared/_ClubLayout.cshtml
+++ b/SailScores.Web/Views/Shared/_ClubLayout.cshtml
@@ -102,7 +102,7 @@
             @if (IsSectionDefined("Sidebar"))
             {
                 @RenderSection("Sidebar")
-                <main class="col-md-9 ml-sm-auto col-lg-10 px-4" role="main">
+                <main class="col-md-10 ml-sm-auto px-4" role="main">
                     @RenderBody()
                 </main>
             }
