SQ and couple other fixes

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -12,14 +12,18 @@
         <h4>What's important in sailing club scoring software?</h4>
         <ul>
             <li>Fast, simple result entry and sharing using the web.</li>
-            <li>Easy-to-remember and shareable direct links to series and club landing pages.</li>
-            <li>Support for overlapping series: count the same race towards the weekend series as well as the season champ series.</li>
+            <li>
+                Support for Appendix A Low Point Scoring,
+                <a href="https://www.ussailing.org/competition/rules-officiating/racing-rules/scoring-a-long-series/">
+                    High Point Percentage,
+                </a> or customized club systems.
+            </li>
+            <li>Shareable direct links to club, series, and regatta pages.</li>
+            <li>Competitor statistics across multiple series.</li>
+            <li>Count a single race in one or many series.</li>
             <li>Club landing page can include links to home page or other results.</li>
             <li>Smartphone, MacOS, and Windows friendly.</li>
-            <li>Support for Appendix A Low Point Scoring, 
-                <a href="https://www.ussailing.org/competition/rules-officiating/racing-rules/scoring-a-long-series/">
-                High Point Percentage,</a> or customized club systems.
-            </li>
+
         </ul>
     </div>
     <div class="col-md-6">
