--- a/SailScores.Web/Views/Competitor/Index.cshtml
+++ b/SailScores.Web/Views/Competitor/Index.cshtml
@@ -23,7 +23,10 @@
     {
         <div class="row">
             <div class="col-12">
-                <h2><a asp-route="Competitor" asp-route-sailNumber="@competitor.SailNumber">@competitor.Name</a></h2>
+                <h2><a asp-route="Competitor"
+                       asp-route-clubInitials="@Model.ClubInitials"
+                       asp-route-sailNumber="@competitor.SailNumber"
+                       >@competitor.Name</a></h2>
             </div>
         </div>
     }
