--- a/SailScores.Web/Views/BoatClass/Edit.cshtml
+++ b/SailScores.Web/Views/BoatClass/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_ClubLayout.cshtml";
 }
 
-<h2>Create a new class</h2>
+<h2>Edit class</h2>
 
 <hr />
 <div class="row">
