--- a/SailScores.Web/Views/Regatta/Index.cshtml
+++ b/SailScores.Web/Views/Regatta/Index.cshtml
@@ -42,7 +42,8 @@
         {
 <div class="row">
     <div class="col-sm-4 col-lg-3">
-        <a href="~/@Model.ClubInitials/Regatta/@regatta.Season.Name/@regatta.UrlName"
+        <a id="regattalink_@regatta.Id"
+           href="~/@Model.ClubInitials/Regatta/@regatta.Season.Name/@regatta.UrlName"
            >@Html.DisplayFor(modelItem => regatta.Name)</a>
         (@(regatta.Fleets?.Count.ToString() ?? "No") Fleets)
     </div>
