--- a/SailScores.Web/Views/Regatta/Index.cshtml
+++ b/SailScores.Web/Views/Regatta/Index.cshtml
@@ -54,7 +54,9 @@
     <div class="col-sm-4 col-lg-3">
         @if (regatta.UpdatedDate.HasValue)
         {
-            <span class="d-none d-md-table-cell"><i>@localizer["Updated"] @(regatta.UpdatedDate.Value.ToString("d"))</i></span>
+            <span class="d-none d-md-table-cell">
+            <i>@localizer["Updated"] @(regatta.UpdatedDate.Value.ToString("d"))</i>
+            </span>
         }
     </div>
 </div>
