WIP: cleaning up ScoringSys ClubId

--- a/SailScores.Web/Views/ScoringSystem/Delete.cshtml
+++ b/SailScores.Web/Views/ScoringSystem/Delete.cshtml
@@ -24,7 +24,7 @@ else
     <div>
         <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="OwningClubId" />
+            <input type="hidden" asp-for="ClubId" />
             <input type="submit" value="Delete" class="btn btn-danger" />
             <a asp-controller="Admin"
                asp-action="Index"
